--- a/Weaver/RealmWeaver.Fody/RealmWeaver.Fody.csproj
+++ b/Weaver/RealmWeaver.Fody/RealmWeaver.Fody.csproj
@@ -54,6 +54,9 @@
     <Reference Include="Mono.Cecil.Rocks">
       <HintPath>..\..\packages\FodyCecil.2.0.6\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
     </Reference>
+    <Reference Include="System.ValueTuple">
+      <HintPath>..\..\packages\System.ValueTuple.4.3.1\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\RealmAssemblyInfo.cs">
