--- a/Weaver/RealmWeaver.Fody/packages.config
+++ b/Weaver/RealmWeaver.Fody/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="FodyCecil" version="2.0.6" targetFramework="net45" developmentDependency="true" />
   <package id="StyleCop.MSBuild" version="4.7.55.0" targetFramework="net45" developmentDependency="true" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
 </packages>
