Revert "extra mtouch logging"
This reverts commit 6ef9ee82fcd50d8e016f018f1624e7d9514e4dff.

--- a/Tests/Tests.iOS/Tests.iOS.csproj
+++ b/Tests/Tests.iOS/Tests.iOS.csproj
@@ -30,6 +30,7 @@
     <MtouchNoSymbolStrip>true</MtouchNoSymbolStrip>
     <MtouchExtraArgs>--linkskip=nunit.runner.iOS --linkskip=Realm -v -v -v -v</MtouchExtraArgs>
     <MtouchExtraArgs>--linkskip=nunit.runner.iOS</MtouchExtraArgs>
+    <MtouchExtraArgs>--linkskip=nunit.runner.iOS --linkskip=Realm</MtouchExtraArgs>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>pdbonly</DebugType>
@@ -44,6 +45,7 @@
     <CodesignKey>iPhone Developer</CodesignKey>
     <MtouchExtraArgs>--linkskip=nunit.runner.iOS --linkskip=Realm -v -v -v -v</MtouchExtraArgs>
     <MtouchExtraArgs>--linkskip=nunit.runner.iOS</MtouchExtraArgs>
+    <MtouchExtraArgs>--linkskip=nunit.runner.iOS --linkskip=Realm</MtouchExtraArgs>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhone' ">
     <DebugType>full</DebugType>
@@ -61,6 +63,7 @@
     <MtouchLink>Full</MtouchLink>
     <MtouchExtraArgs>--linkskip=nunit.runner.iOS --linkskip=Realm -v -v -v -v</MtouchExtraArgs>
     <MtouchExtraArgs>--linkskip=nunit.runner.iOS</MtouchExtraArgs>
+    <MtouchExtraArgs>--linkskip=nunit.runner.iOS --linkskip=Realm</MtouchExtraArgs>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>pdbonly</DebugType>
@@ -75,6 +78,7 @@
     <MtouchLink>Full</MtouchLink>
     <MtouchExtraArgs>--linkskip=nunit.runner.iOS --linkskip=Realm -v -v -v -v</MtouchExtraArgs>
     <MtouchExtraArgs>--linkskip=nunit.runner.iOS</MtouchExtraArgs>
+    <MtouchExtraArgs>--linkskip=nunit.runner.iOS --linkskip=Realm</MtouchExtraArgs>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
